refactor: handle url deprecation using uri